--- a/app/src/main/res/layout/doc_popup.xml
+++ b/app/src/main/res/layout/doc_popup.xml
@@ -1,25 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="340dp"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:background="@color/colorBlack">
+    android:layout_width="match_parent"
+    android:layout_height="600dp"
+    android:layout_gravity="center">
+
+    <Button
+        android:id="@+id/popup_close"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:background="@drawable/popup_close"/>
 
     <TextView
+        android:id="@+id/popup_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:background="@drawable/popup_background" />
 
+    <RelativeLayout
+        android:id="@+id/popup_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/popup_image"
+        android:layout_marginTop="-22dp"
+        android:background="@drawable/popup_bar">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/popup_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:scrollbars="vertical"/>
+        </LinearLayout>
+
+
+
+
+    </RelativeLayout>
+
     <TextView
+        android:id="@+id/popup_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="150dp"
         android:background="@drawable/popup_circle"
-        android:fontFamily="@font/"
+        android:fontFamily="@font/liujian"
         android:gravity="center"
         android:text="King\nof\nKings"
-        android:textSize="18sp"/>
+        android:textColor="@color/colorAccent"
+        android:textSize="23sp"
+        android:textStyle="bold"/>
+
 
 
 </RelativeLayout>
