--- a/app/src/main/res/layout/lessons_list_view.xml
+++ b/app/src/main/res/layout/lessons_list_view.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="5dp"
     android:clickable="true"
     android:elevation="10dp"
     android:foreground="?android:attr/selectableItemBackground"
@@ -25,7 +27,7 @@
 
         <TextView
             android:id="@+id/lessons_text_view"
-            android:layout_width="280dp"
+            android:layout_width="260dp"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/icon_padding"
             android:fontFamily="@font/mvboli"
@@ -38,8 +40,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/icon_padding"
+            android:layout_gravity="right|center"
             android:scaleType="fitXY"
             android:src="@drawable/ic_goto"/>
 
