--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,118 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-    tools:context=".HomeDefault">
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/home_layout"
+    <androidx.drawerlayout.widget.DrawerLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="false"
         tools:context=".HomeDefault">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/home_appbar"
+        <RelativeLayout
+            android:id="@+id/home_layout"
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="match_parent"
+            tools:context=".HomeDefault">
 
-            <RelativeLayout
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/home_appbar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="250dp">
 
-                <ImageView
-                    android:id="@+id/home_img"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginTop="0dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/ic_home_img" />
+                    android:layout_height="match_parent">
 
-                <LinearLayout
-                    android:id="@+id/bar_lay"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="5dp"
-                    android:orientation="horizontal"
-                    android:padding="1dp">
-
-                    <ImageButton
-                        android:id="@+id/nav_button"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_gravity="center"
-                        android:background="@null"
-                        android:src="@drawable/ic_nav_bar" />
+                    <ImageView
+                        android:id="@+id/home_img"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginTop="0dp"
+                        android:contentDescription="@string/todo"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_home_img" />
 
                     <LinearLayout
-                        android:layout_width="280dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginBottom="5dp"
-                        android:orientation="vertical">
+                        android:id="@+id/bar_lay"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="5dp"
+                        android:orientation="horizontal"
+                        android:padding="1dp">
 
-                        <include layout="@layout/search_bar" />
+                        <ImageButton
+                            android:id="@+id/nav_button"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center"
+                            android:background="@null"
+                            android:contentDescription="@string/todo"
+                            android:src="@drawable/ic_nav_bar" />
+
+                        <LinearLayout
+                            android:layout_width="280dp"
+                            android:layout_height="40dp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginRight="10dp"
+                            android:orientation="vertical">
+
+                            <include layout="@layout/search_bar" />
+
+                        </LinearLayout>
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/cycle_verse"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end|center"
+                            android:layout_marginEnd="5dp"
+                            android:backgroundTint="@android:color/white"
+                            android:clickable="true"
+                            android:onClick="onClickCycleVerse"
+                            android:src="@drawable/ic_set_random"
+                            android:tint="@color/colorPrimary"
+                            app:backgroundTint="@color/colorPrimary"
+                            app:fabCustomSize="30dp"/>
 
                     </LinearLayout>
 
-                    <Button
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:background="@drawable/ic_set_random"
-                        android:padding="10dp" />
+                    <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/home_tabLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        app:tabIndicator="@drawable/sh_tab_indicator"
+                        app:tabIndicatorColor="@color/colorPrimary"
+                        app:tabSelectedTextColor="@color/colorWhite"
+                        app:tabTextAppearance="@style/TabTextAppearance">
 
-                </LinearLayout>
+                    </com.google.android.material.tabs.TabLayout>
 
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/home_tabLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    app:tabIndicator="@drawable/sh_tab_indicator"
-                    app:tabIndicatorColor="@color/colorPrimary"
-                    app:tabSelectedTextColor="@color/colorWhite"
-                    app:tabTextAppearance="@style/TabTextAppearance">
-
-                </com.google.android.material.tabs.TabLayout>
-
-            </RelativeLayout>
+                </RelativeLayout>
 
 
-        </com.google.android.material.appbar.AppBarLayout>
+            </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/home_view_pager"
-            android:layout_width="match_parent"
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/home_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/home_appbar">
+
+            </androidx.viewpager.widget.ViewPager>
+
+        </RelativeLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_below="@+id/home_appbar">
+            android:layout_gravity="start"
+            android:background="@drawable/nav_back"
+            app:headerLayout="@layout/nav_header"
+            app:itemHorizontalPadding="20dp"
+            app:itemIconTint="@color/colorWhite"
+            app:itemTextAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
+            app:itemTextColor="@color/colorWhite"
+            app:menu="@menu/drawer_menu" />
 
-        </androidx.viewpager.widget.ViewPager>
-    </RelativeLayout>
+    </androidx.drawerlayout.widget.DrawerLayout>
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+    <ImageView
+        android:id="@+id/block_view"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@drawable/nav_back"
-        app:headerLayout="@layout/nav_header"
-        app:itemHorizontalPadding="20dp"
-        app:itemIconTint="@color/colorWhite"
-        app:itemTextAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
-        app:itemTextColor="@color/colorWhite"
-        app:menu="@menu/drawer_menu"/>
+        android:alpha="0.8"
+        android:background="@null"
+        android:clickable="true"
+        android:contentDescription="@string/todo"
+        android:focusable="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/black_screen"
+        android:visibility="gone" />
 
+        <include layout="@layout/floating_btn"/>
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</RelativeLayout>
