--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -6,4 +6,7 @@
     <dimen name="primary_text_size">16sp</dimen>
     <dimen name="options_text_size">12sp</dimen>
     <dimen name="icon_padding">5dp</dimen>
+    <dimen name="standard_55">70dp</dimen>
+    <dimen name="standard_105">120dp</dimen>
+    <dimen name="standard_155">170dp</dimen>
 </resources>
