--- a/app/src/main/res/layout/audio_list_view.xml
+++ b/app/src/main/res/layout/audio_list_view.xml
@@ -3,21 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="10dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
     android:clickable="true"
     android:elevation="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/cardBack"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="6dp"
+    android:stateListAnimator="@animator/lesson_card_statelist"
+    app:cardCornerRadius="50dp"
+    app:cardElevation="10dp"
     app:cardMaxElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/audio_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -31,9 +37,9 @@
 
             <TextView
                 android:id="@+id/audio_text_view_title"
-                android:layout_width="200dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
                 android:ellipsize="end"
                 android:fontFamily="@font/mvboli"
                 android:maxLines="1"
@@ -41,95 +47,36 @@
                 android:textColor="#000"
                 android:textSize="@dimen/main_text_size"/>
 
-            <TextView
-                android:id="@+id/audio_text_view_path"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/audio_text_view_title"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:padding="2dp"
-                android:text="Lorem aodfijkadflnkladfnlkdaf"
-                android:textSize="@dimen/primary_text_size" />
-
-            <LinearLayout
-                android:id="@+id/audio_info_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/audio_text_view_path"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:paddingBottom="1dp"
-                    android:text="Status: "
-                    android:textSize="@dimen/secondary_text_size" />
-
-                <TextView
-                    android:id="@+id/audio_text_view_status"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="5dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="Online"
-                    android:textSize="@dimen/secondary_text_size" />
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="2dp"
-                    android:layout_marginBottom="2dp"
-                    android:background="@color/colorGrey"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="Connection:"
-                    android:textSize="@dimen/secondary_text_size" />
-
-
-                <ImageView
-                    android:id="@+id/audio_image_view_connection"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/ic_conn_suc"/>
-
-                <ProgressBar
-                    android:id="@+id/audio_connection_progress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"/>
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_above="@id/audio_info_view"
-                android:layout_toRightOf="@+id/audio_text_view_title">
-
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/audio_image_view_lock"
+            <ProgressBar
+                android:id="@+id/determinateBar"
+                style="@android:style/Widget.Material.ProgressBar.Horizontal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginEnd="@dimen/icon_padding"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_lock"
-                android:visibility="invisible"/>
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/audio_text_view_title"
+                android:max="100"
+                android:progress="0"/>
+
+            <TextView
+                android:id="@+id/time_stamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/determinateBar"
+                android:text="0:00"
+                android:textSize="10sp"/>
+
+            <Button
+                android:id="@+id/audio_play"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/ic_audio_play"/>
+
+
         </RelativeLayout>
 
     </LinearLayout>
