--- a/app/src/main/res/layout/doc_list_view.xml
+++ b/app/src/main/res/layout/doc_list_view.xml
@@ -2,15 +2,19 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:layout_margin="10dp"
+    android:layout_height="50dp"
+    android:layout_marginLeft="1dp"
+    android:layout_marginTop="1dp"
+    android:layout_marginRight="1dp"
+    android:layout_marginBottom="1dp"
     android:clickable="true"
-    android:elevation="10dp"
+    android:elevation="2dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/cardBack"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="6dp"
-    app:cardMaxElevation="10dp">
+    android:stateListAnimator="@animator/lesson_card_statelist"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="2dp"
+    app:cardMaxElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,43 +24,34 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_gravity="center"
-            android:padding="@dimen/icon_padding"
-            android:src="@drawable/ic_doc"/>
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/todo"
+            android:src="@drawable/ic_doc" />
 
         <RelativeLayout
-            android:layout_width="270dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
-            android:layout_margin="10dp">
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="1dp">
 
             <TextView
                 android:id="@+id/doc_text_view_title"
-                android:layout_width="220dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
                 android:ellipsize="end"
                 android:fontFamily="@font/mvboli"
                 android:maxLines="1"
-                android:text="Document"
+                android:gravity="center_vertical"
                 android:textColor="#000"
-                android:textSize="@dimen/main_text_size"/>
-
-            <TextView
-                android:id="@+id/doc_text_view_path"
-                android:layout_width="220dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/doc_text_view_title"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:padding="2dp"
-                android:text="Lorem aodfijkadflnkladfnlkdaf"
-                android:textSize="@dimen/primary_text_size" />
+                android:text="@string/document"
+                android:textSize="14sp"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toRightOf="@+id/doc_text_view_title">
+                android:layout_toEndOf="@+id/doc_text_view_title">
 
                 <ImageButton
                     android:layout_width="wrap_content"
@@ -64,7 +59,9 @@
                     android:layout_centerInParent="true"
                     android:background="@null"
                     android:clickable="true"
-                    android:src="@drawable/ic_share"/>
+                    android:contentDescription="@string/todo"
+                    android:focusable="true"
+                    android:src="@drawable/ic_share" />
 
             </RelativeLayout>
 
@@ -74,11 +71,14 @@
             android:id="@+id/doc_image_view_lock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="@dimen/icon_padding"
             android:scaleType="fitXY"
             android:src="@drawable/ic_lock"
-            android:visibility="visible"/>
+            android:contentDescription="@string/todo"
+            android:visibility="visible" />
+
+
 
     </LinearLayout>
 
