--- a/app/src/main/res/layout/lessons_frag_layout.xml
+++ b/app/src/main/res/layout/lessons_frag_layout.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
         >
 
     </androidx.recyclerview.widget.RecyclerView>
