--- a/app/src/main/res/layout/lessons_list_view.xml
+++ b/app/src/main/res/layout/lessons_list_view.xml
@@ -6,12 +6,14 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
     android:clickable="true"
     android:elevation="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/cardBack"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="6dp"
+    android:stateListAnimator="@animator/lesson_card_statelist"
+    app:cardCornerRadius="50dp"
+    app:cardElevation="10dp"
     app:cardMaxElevation="10dp">
 
     <LinearLayout
@@ -21,13 +23,15 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:padding="@dimen/icon_padding"
-            android:src="@drawable/ic_lesson"/>
+            android:layout_marginStart="10dp"
+            android:src="@drawable/ic_lesson"
+            />
 
         <TextView
             android:id="@+id/lessons_text_view"
-            android:layout_width="260dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/icon_padding"
             android:fontFamily="@font/mvboli"
@@ -38,9 +42,11 @@
             android:textSize="@dimen/main_text_size" />
 
         <ImageView
+            android:layout_gravity="end|center"
+            android:layout_marginTop="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|center"
+            android:layout_marginEnd="5dp"
             android:scaleType="fitXY"
             android:src="@drawable/ic_goto"/>
 
