--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -1,46 +1,325 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/background_sign_in">
 
-    <Button
-        android:id="@+id/sign_in_close"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/ic_search_close"/>
+    <RelativeLayout
+        android:id="@+id/card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="540dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/card_sign_in">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+        <RelativeLayout
+            android:id="@+id/view_sign_in"
+            android:layout_width="265dp"
+            android:layout_height="280dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:alpha="1"
+            android:background="@drawable/sign_in_content"
+            android:visibility="visible">
+
+            <LinearLayout
+                android:layout_width="250dp"
+                android:layout_height="220dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="5dp"
+                android:orientation="vertical"
+                android:paddingTop="5dp">
+
+                <EditText
+                    android:id="@+id/signin_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3B130C"
+                    android:drawableStart="@drawable/ic_signin_account"
+                    android:drawablePadding="5dp"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="#3B130C"
+                    android:textColorHint="#9d8985"
+                    android:textSize="15sp"/>
+
+                <EditText
+                    android:id="@+id/signin_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3B130C"
+                    android:drawableStart="@drawable/ic_signin_lock"
+                    android:drawablePadding="5dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColor="#3B130C"
+                    android:textColorHint="#9d8985"
+                    android:textSize="15sp"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp">
+
+                    <LinearLayout
+                        android:id="@+id/signin_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="5dp"
+                            android:onClick="onClickSignin"
+                            android:text="SIGN IN"/>
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="5dp"
+                            android:onClick="onClickCancelSigninPage"
+                            android:text="CANCEL"/>
+
+                    </LinearLayout>
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:alpha="0"
+                        android:indeterminateTint="#3B130C"
+                        android:visibility="gone"/>
+
+                    <TextView
+                        android:id="@+id/progress_check"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:alpha="0"
+                        android:background="@drawable/ic_check_black_24dp"
+                        android:visibility="gone"/>
+
+                </RelativeLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="3dp"
+                        android:clickable="true"
+                        android:onClick="onClickSignupPage"
+                        android:src="@drawable/link_signup"
+                        android:stateListAnimator="@animator/signup_link_statelist"/>
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="2dp"
+                        android:clickable="true"
+                        android:onClick="onClickForgotPassword"
+                        android:src="@drawable/link_forget"
+                        android:stateListAnimator="@animator/signup_link_statelist"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/view_sign_up"
+            android:layout_width="265dp"
+            android:layout_height="280dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:alpha="0"
+            android:background="@drawable/sign_up_content"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="250dp"
+                android:layout_height="220dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="12dp"
+                android:orientation="vertical"
+                android:paddingTop="5dp">
+
+                <EditText
+                    android:id="@+id/signup_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3B130C"
+                    android:drawableStart="@drawable/ic_signin_account"
+                    android:drawablePadding="5dp"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="#3B130C"
+                    android:textColorHint="#9d8985"
+                    android:textSize="15sp"/>
+
+                <EditText
+                    android:id="@+id/signup_pass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3B130C"
+                    android:drawableStart="@drawable/ic_signin_lock1"
+                    android:drawablePadding="5dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColor="#3B130C"
+                    android:textColorHint="#9d8985"
+                    android:textSize="15sp"/>
+
+                <EditText
+                    android:id="@+id/signup_confirmpass"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#3B130C"
+                    android:drawableStart="@drawable/ic_signin_lock"
+                    android:drawablePadding="5dp"
+                    android:hint="Confirm Password"
+                    android:inputType="textPassword"
+                    android:textColor="#3B130C"
+                    android:textColorHint="#9d8985"
+                    android:textSize="15sp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="1dp"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_margin="2dp"
+                        android:onClick="onClickSignup"
+                        android:text="SIGN UP"/>
+
+                    <TextView
+                        android:id="@+id/signup_go_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:clickable="true"
+                        android:fontFamily="@font/mvboli"
+                        android:gravity="center"
+                        android:onClick="onClickSigninPage"
+                        android:text="Go Back to Sign In Page"
+                        android:textColor="#124E68"
+                        android:textSize="12sp"
+                        />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
+                    android:fontFamily="@font/mvboli"
+                    android:gravity="center"
+                    android:text="By creating an account you agree to our\nTerms of Service and Privacy Policy"
+                    android:textColor="#124E68"
+                    android:textSize="7sp"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/social_login"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/social_login"
+        android:clickable="true"
+        android:onClick="onClickSocialPage"
+        android:stateListAnimator="@animator/click_me_statelist"/>
 
-        <EditText
-            android:id="@+id/sign_in_email"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="10dp"
-            android:hint="Email"
-            android:inputType="textEmailAddress" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/social_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:alpha="0"
+        android:onClick="onClickSocialClose"
+        android:src="@drawable/ic_social_close"
+        android:visibility="gone"
+        app:backgroundTint="@color/colorWhite"/>
 
-        <EditText
-            android:id="@+id/sign_in_password"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="10dp"
-            android:hint="Password"
-            android:inputType="textPassword" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/social_btn1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:alpha="0"
+        android:onClick="onClickSocialGoogle"
+        android:src="@drawable/ic_social_google"
+        android:visibility="gone"
+        app:backgroundTint="@color/colorWhite"/>
 
-        <Button
-            android:id="@+id/sign_in_btn"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Sign In"/>
-    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/social_btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/card_view"
+        android:layout_centerHorizontal="true"
+        android:alpha="0"
+        android:onClick="onClickSocialFacebook"
+        android:src="@drawable/ic_social_facebook"
+        android:visibility="gone"
+        app:backgroundTint="@color/colorWhite"/>
+
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:visibility="gone"/>
+
+    <RelativeLayout
+        android:id="@+id/authenticate_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:background="@drawable/black_screen"
+        android:clickable="true"
+        android:visibility="gone">
+
+    </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/authenticate_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminateTint="#3B130C"
+        android:visibility="gone"/>
+
 </RelativeLayout>
