--- a/app/src/main/res/animator/blink.xml
+++ b/app/src/main/res/animator/blink.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <objectAnimator android:duration="1000"
-        android:interpolator="@android:interpolator/accelerate_decelerate"
-        android:propertyName="rotation"
+    <objectAnimator
+        android:duration="800"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+        android:propertyName="alpha"
         android:repeatCount="infinite"
         android:repeatMode="reverse"
         android:valueFrom="0f"
-        android:valueTo="360"
+        android:valueTo="1f"
         android:valueType="floatType"/>
 
 </set>
