--- a/app/src/main/res/layout/audio_list_view.xml
+++ b/app/src/main/res/layout/audio_list_view.xml
@@ -44,7 +44,7 @@
                 android:fontFamily="@font/mvboli"
                 android:maxLines="1"
                 android:text="Track 1"
-                android:textColor="#000"
+                android:textColor="@color/colorAccent"
                 android:textSize="@dimen/main_text_size"/>
 
             <ProgressBar
