--- a/app/src/main/res/layout/doc_list_view.xml
+++ b/app/src/main/res/layout/doc_list_view.xml
@@ -2,58 +2,61 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginLeft="1dp"
-    android:layout_marginTop="1dp"
-    android:layout_marginRight="1dp"
-    android:layout_marginBottom="1dp"
+    android:layout_height="80dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="2dp"
     android:clickable="true"
-    android:elevation="2dp"
+    android:elevation="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="@color/cardBack"
     android:stateListAnimator="@animator/lesson_card_statelist"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="2dp"
-    app:cardMaxElevation="2dp">
+    app:cardCornerRadius="50dp"
+    app:cardElevation="10dp"
+    app:cardMaxElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="20dp"
             android:contentDescription="@string/todo"
             android:src="@drawable/ic_doc" />
 
-        <RelativeLayout
-            android:layout_width="240dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="1dp">
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/doc_text_view_title"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:ellipsize="end"
                 android:fontFamily="@font/mvboli"
                 android:maxLines="1"
-                android:gravity="center_vertical"
-                android:textColor="#000"
                 android:text="@string/document"
-                android:textSize="14sp"/>
+                android:textColor="@color/colorAccent"
+                android:textSize="@dimen/main_text_size" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toEndOf="@+id/doc_text_view_title">
+                android:layout_centerInParent="true"
+                android:gravity="center_vertical|end">
 
                 <ImageButton
+                    android:id="@+id/doc_share"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
@@ -63,20 +66,23 @@
                     android:focusable="true"
                     android:src="@drawable/ic_share" />
 
-            </RelativeLayout>
+                <ImageView
+                    android:id="@+id/doc_image_view_lock"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_toEndOf="@+id/doc_share"
+                    android:contentDescription="@string/todo"
+                    android:src="@drawable/ic_signin_lock"
+                    android:visibility="gone"/>
 
-        </RelativeLayout>
+            </LinearLayout>
 
-        <ImageView
-            android:id="@+id/doc_image_view_lock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_lock"
-            android:contentDescription="@string/todo"
-            android:visibility="visible" />
+
+        </LinearLayout>
+
+
 
 
 
