--- a/app/src/main/res/layout/doc_popup.xml
+++ b/app/src/main/res/layout/doc_popup.xml
@@ -26,27 +26,22 @@
         android:layout_marginTop="-22dp"
         android:background="@drawable/popup_bar">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical">
-
-
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/popup_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:layout_marginLeft="14dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="14dp"
-                android:layout_marginBottom="14dp"
                 android:scrollbars="vertical"/>
-        </LinearLayout>
-
-
-
+        </RelativeLayout>
 
     </RelativeLayout>
 
@@ -64,6 +59,14 @@
         android:textSize="23sp"
         android:textStyle="bold"/>
 
-
+    <ProgressBar
+        android:id="@+id/loading_progress_popup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:padding="170dp"
+        android:progressTint="@color/colorAccent"
+        android:visibility="visible"/>
 
 </RelativeLayout>
