--- a/app/src/main/res/layout/lessons_frag_layout.xml
+++ b/app/src/main/res/layout/lessons_frag_layout.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
     <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/lessons_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="2dp"
-        >
+        android:layout_marginBottom="2dp"/>
 
-    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
