--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,14 +37,13 @@
         <item name="android:windowNoTitle">true</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
 
         <!-- Set this to true if you want Full Screen without status bar -->
         <item name="android:windowFullscreen">false</item>
 
         <item name="android:windowIsFloating">false</item>
 
-        <!-- This is important! Don't forget to set window background -->
-        <item name="android:windowBackground">@color/colorWhite</item>
 
     </style>
 
