--- a/app/src/main/res/layout/adddata_activity.xml
+++ b/app/src/main/res/layout/adddata_activity.xml
@@ -26,6 +26,15 @@
             android:visibility="gone"
             android:background="@drawable/spinner_lessons"/>
 
+        <Spinner
+            android:id="@+id/spinner_audio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:alpha="0"
+            android:background="@drawable/spinner_lessons"
+            android:visibility="gone"/>
+
         <EditText
             android:id="@+id/edit_text_lesson"
             android:layout_width="match_parent"
@@ -53,12 +62,44 @@
                 android:layout_height="wrap_content"
                 android:buttonTint="@color/colorPrimary"
                 android:text="Existing"
+                android:layout_marginEnd="10dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginEnd="50dp"
                 android:alpha="0"
                 android:fontFamily="@font/mvboli"
                 android:textColor="@color/colorPrimary"
                 android:visibility="gone"/>
+
+            <RadioGroup
+                android:id="@+id/language_input"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mvboli"
+                    android:text="English"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="10sp"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mvboli"
+                    android:text="Punjabi"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="10sp"/>
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/mvboli"
+                    android:text="Hindi"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="10sp"/>
+
+            </RadioGroup>
 
             <Spinner
                 android:id="@+id/spinner_document"
@@ -66,6 +107,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/spinner_document"
                 android:alpha="0"
+                android:layout_gravity="center"
+                android:layout_marginStart="10dp"
                 android:visibility="gone"/>
 
         </LinearLayout>
@@ -151,14 +194,46 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/spinner_recycler_view"
+            android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
             android:layout_height="320dp"
             android:layout_marginTop="20dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:background="@android:color/background_light"
             android:paddingBottom="10dp"
-            android:visibility="gone"/>
+            android:visibility="gone">
+
+        </androidx.recyclerview.widget.RecyclerView>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/adddata_list_view_lock_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="20dp"
+            android:alpha="0"
+            android:fontFamily="@font/mvboli"
+            android:text="Lock Initiated"
+            android:textColor="@color/colorAccent"
+            android:visibility="gone"/>
+
+        <Button
+            android:id="@+id/adddata_list_view_delete_btn"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/ic_delete_list"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 
 </LinearLayout>
