--- a/app/src/main/res/layout/adddata_activity_list_view.xml
+++ b/app/src/main/res/layout/adddata_activity_list_view.xml
@@ -1,29 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_margin="2dp"
-    android:elevation="10dp"
-    android:outlineAmbientShadowColor="@color/colorAccent"
-    app:cardCornerRadius="10dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/item_list_background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/adddata_list_view_text_view"
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fontFamily="@font/mvboli"
-            android:gravity="center_vertical"
-            android:padding="10dp"
-            android:text="Document 1"
-            android:textColor="@color/colorAccent"
-            />
+            android:layout_height="60dp"
+            app:cardBackgroundColor="@android:color/holo_red_dark">
 
-    </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/swipe_delete"
+                    android:fontFamily="@font/mvboli"
+                    android:text="DELETE"
+                    android:textColor="@color/colorWhite"/>
+
+                <Button
+                    android:id="@+id/swipe_delete"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/ic_delete_white"/>
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
 
 
-</androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/item_list_foreground"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="60dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <TextView
+                    android:id="@+id/adddata_list_view_text_view"
+                    android:layout_width="250dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:ellipsize="end"
+                    android:fontFamily="@font/mvboli"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:padding="20dp"
+                    android:text="Document 1"
+                    android:textColor="@color/colorAccent"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="end">
+                    <ProgressBar
+                        android:id="@+id/adddata_list_view_progress_view"
+                        style="?android:progressBarStyleHorizontal"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:progress="0"
+                        android:progressDrawable="@drawable/circle"/>
+
+                    <ImageView
+                        android:id="@+id/adddata_list_view_image_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="10dp"
+                        android:src="@drawable/ic_successful"
+                        android:visibility="gone"/>
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </RelativeLayout>
+
+</FrameLayout>
