--- a/app/src/main/res/layout/doc_list_view.xml
+++ b/app/src/main/res/layout/doc_list_view.xml
@@ -47,7 +47,7 @@
                 android:maxLines="1"
                 android:text="@string/document"
                 android:textColor="@color/colorAccent"
-                android:textSize="@dimen/main_text_size" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
