--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,21 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
 
 <!--        Activity Animation -->
-        <item name="android:windowContentTransitions">true</item>
-        <item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
 
-    </style>
-
-<!--    Activity Animation -->
-    <style name="ActivityAnimation" parent="@android:style/Animation.Activity">
-        <item name="android:activityOpenEnterAnimation">
-            @anim/activity_open_enter</item>
-        <item name="android:activityOpenExitAnimation">
-            @anim/activity_open_exit</item>
-        <item name="android:activityCloseEnterAnimation">
-            @anim/activity_close_enter</item>
-        <item name="android:activityCloseExitAnimation">
-            @anim/activity_close_exit</item>
+<!--        <item name="android:activityOpenEnterAnimation">-->
+<!--            @anim/activity_open_enter</item>-->
+<!--        <item name="android:activityOpenExitAnimation">-->
+<!--            @anim/activity_open_exit</item>-->
+<!--        <item name="android:activityCloseEnterAnimation">-->
+<!--            @anim/activity_close_enter</item>-->
+<!--        <item name="android:activityCloseExitAnimation">-->
+<!--            @anim/activity_close_exit</item>-->
     </style>
 
     <style name="TabTextAppearance" parent="Widget.Design.TabLayout">
