--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp" android:layout_height="80dp"
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@color/colorWhite"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <RelativeLayout
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
         android:padding="5dp">
 
         <ProgressBar
             android:id="@+id/progress_dialog_bar1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:progressDrawable="@drawable/circle"
+            android:visibility="visible"/>
 
         <ProgressBar
             android:id="@+id/progress_dialog_bar2"
             style="?android:progressBarStyleHorizontal"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerInParent="true"
             android:progress="0"
             android:progressDrawable="@drawable/circle"/>
@@ -37,9 +41,9 @@
 
     <TextView
         android:id="@+id/progress_dialog_text"
-        android:layout_width="match_parent"
+        android:layout_width="160dp"
         android:layout_height="match_parent"
-        android:fontFamily="@font/mvboli"
+        android:fontFamily="@font/georgia"
         android:gravity="center"
         android:text="Downloading"
         android:textColor="@color/colorAccent"
